force-app/main/default/objects/WarrantyTerm__c/WarrantyTerm__c.object-meta.xml
<CustomObject>
    <label>워런티</label>
    <nameField>
        <label>Warranty Term Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>