force-app/main/default/objects/WarrantyTerm__c/fields/EffectiveStartDateType__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDateType__c</fullName>
    <label>Effective Start Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EffectiveStartDateType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>