force-app/main/default/objects/WarrantyTerm__c/fields/ExchangeType__c.field-meta.xml
<CustomField>
    <fullName>ExchangeType__c</fullName>
    <label>Exchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pre-exchange</fullName>
            </value>
            <value>
                <fullName>rental item</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>