force-app/main/default/objects/WarrantyTerm__c/fields/ExpensesCoveredDuration__c.field-meta.xml
<CustomField>
    <fullName>ExpensesCoveredDuration__c</fullName>
    <label>Expenses Covered Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>