force-app/main/default/objects/WarrantyTerm__c/fields/LaborCoveredDuration__c.field-meta.xml
<CustomField>
    <fullName>LaborCoveredDuration__c</fullName>
    <label>Labor Covered Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>