force-app/main/default/objects/WarrantyTerm__c/fields/PartsCovered__c.field-meta.xml
<CustomField>
    <fullName>PartsCovered__c</fullName>
    <label>Parts Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>