force-app/main/default/objects/WarrantyTerm__c/fields/PartsCoveredDuration__c.field-meta.xml
<CustomField>
    <fullName>PartsCoveredDuration__c</fullName>
    <label>Parts Covered Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>