force-app/main/default/objects/WarrantyTerm__c/fields/PriceBookID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book ID</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Warranty Term</relationshipLabel>
    <relationshipName>Warranty_Term</relationshipName>
    <type>Lookup</type>
</CustomField>