force-app/main/default/objects/WarrantyTerm__c/fields/Transferable__c.field-meta.xml
<CustomField>
    <fullName>Transferable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferable</label>
    <type>Checkbox</type>
</CustomField>