force-app/main/default/objects/WarrantyTerm__c/fields/UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitofMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>