force-app/main/default/objects/WarrantyTerm__c/fields/UsageCovered__c.field-meta.xml
<CustomField>
    <fullName>UsageCovered__c</fullName>
    <label>Usage Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>