force-app/main/default/objects/WarrantyTerm__c/fields/WarrantyDuration__c.field-meta.xml
<CustomField>
    <fullName>WarrantyDuration__c</fullName>
    <label>Warranty Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>