force-app/main/default/objects/WarrantyTerm__c/fields/WarrantyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyType__c</fullName>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>recovery</fullName>
            </value>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>