force-app/main/default/objects/WarrantyTerm__c/fields/WarrantyUnitOfTime__c.field-meta.xml
<CustomField>
    <fullName>WarrantyUnitOfTime__c</fullName>
    <label>Warranty Unit Of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>